Addede bookings and ticket form

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -5,8 +5,10 @@ Table Of Contents:
 - Css Reset
 - Colors
 - General Styles
-- Navigation
-- Back Butto Top
+- Side Navbar
+- Dashboard Content
+- Right Side Navbar
+- Booking List style
 - Media Queries
 ******************************************/
 
@@ -55,6 +57,43 @@ Table Of Contents:
 @import "mixins";
 @import "login_register";
 
+.btn-o-p {
+  background: #fff;
+  opacity: 0.92;
+  border: 0.1rem solid $nav-hover;
+  color: $nav-hover;
+  font-size: 0.9em;
+
+  &:hover {
+    background: $nav-hover;
+    border: 0.1rem solid $nav-hover;
+    opacity: 1;
+  }
+}
+
+.icon {
+  font-size: 1.5em;
+  color: $red;
+  background: $hover-bg;
+  padding: 0.5rem;
+  border-radius: 0.4rem;
+}
+
+.icon-income {
+  font-size: 1.5em;
+  color: $green;
+  background: $hover-bg;
+  padding: 0.5rem;
+  border-radius: 0.4rem;
+}
+
+.icon-users {
+  font-size: 1.5em;
+  color: $nav-hover;
+  background: $hover-bg;
+  padding: 0.5rem;
+  border-radius: 0.4rem;
+}
 
 .divider {
   height: 0.05rem;
@@ -97,7 +136,7 @@ Table Of Contents:
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
   border: none;
-  background-color: #fcfafb;
+  background-color: #fff;
 }
 
 .dropdown-item {
@@ -116,8 +155,8 @@ Table Of Contents:
 }
 
 .dropdown-item:hover {
-  background-color: #fcfafb;
-  // color: $secondary;
+  // background-color: #fcfafb;
+  color: $nav-hover;
 }
 
 .dropdown-divider {
@@ -128,6 +167,122 @@ Table Of Contents:
   background-color: #d1d1d1;
 }
 /* end of dropdown menu */
+
+.cta {
+  position: relative;
+  margin: auto;
+  padding: 12px 18px;
+  transition: all 0.2s ease;
+  border: none;
+  background: none;
+}
+
+.cta:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  border-radius: 50px;
+  background: #b1dae7;
+  width: 45px;
+  height: 40px;
+  transition: all 0.3s ease;
+}
+
+.cta span {
+  position: relative;
+
+  font-weight: 700;
+  letter-spacing: 0.05em;
+  color: #234567;
+}
+
+.cta svg {
+  position: relative;
+  top: 0;
+  margin-left: 10px;
+  fill: none;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke: #234567;
+  stroke-width: 2;
+  transform: translateX(-5px);
+  transition: all 0.3s ease;
+}
+
+.cta:hover:before {
+  width: 100%;
+  background: #b1dae7;
+}
+
+.cta:hover svg {
+  transform: translateX(0);
+}
+
+.cta:active {
+  transform: scale(0.95);
+}
+
+.button {
+  display: inline-block;
+  padding: 12px 24px;
+  border: 1px solid #4f4f4f;
+  border-radius: 4px;
+  transition: all 0.2s ease-in;
+  position: relative;
+  overflow: hidden;
+  font-size: 19px;
+  color: black;
+  z-index: 1;
+}
+
+.button:before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.25);
+  top: 100%;
+  width: 140%;
+  height: 180%;
+  background-color: rgba(0, 0, 0, 0.05);
+  border-radius: 50%;
+  display: block;
+  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
+}
+
+.button:after {
+  content: "";
+  position: absolute;
+  left: 55%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.45);
+  top: 180%;
+  width: 160%;
+  height: 190%;
+  background-color: #39bda7;
+  border-radius: 50%;
+  display: block;
+  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
+}
+
+.button:hover {
+  color: #ffffff;
+  border: 1px solid #39bda7;
+}
+
+.button:hover:before {
+  top: -35%;
+  background-color: #39bda7;
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
+
+.button:hover:after {
+  top: -45%;
+  background-color: #39bda7;
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
 
 /**********************/
 /*     Side Navbar    */
@@ -249,5 +404,14 @@ Table Of Contents:
   }
 }
 
+/**********************/
+/* Booking List style */
+/**********************/
+@import "bookings-table";
+
+/**********************/
+/* Mediaqueries */
+/**********************/
 @import "lg";
 @import "sm";
+@import "md";
