--- a/sass/_lg.scss
+++ b/sass/_lg.scss
@@ -62,6 +62,8 @@
 
       ul {
         @include flexItem(column, start);
+
+        margin-bottom: 1.5rem;
         li {
           margin: 2rem 0;
           position: relative;
@@ -108,5 +110,85 @@
 
   .right_hand_side {
     display: none;
+  }
+
+  /**********************/
+  /* Booking List style */
+  /**********************/
+
+  .booking-list-container {
+
+    .booking-header-container {
+
+
+      .row_ {
+        
+        .col-table-1 {
+   
+          display: none;
+  
+        }
+
+        .col-table-2 {
+          width: 20%;
+        }
+
+        .col-table-3 {
+          width: 20%;
+        }
+
+        .col-table-4 {
+          width: 20%;
+        }
+
+        .col-table-5 {
+          width: 12%;
+        }
+
+        .col-table-6 {
+          width: 12%;
+        }
+
+        .col-table-7 {
+          width: 15%;
+        }
+      }
+    }
+
+    .header-subtitle-container {
+  
+
+      .row_ {
+        .col-table-1 {
+   
+          display: none;
+  
+        }
+
+        .col-table-2 {
+          width: 20%;
+        }
+
+        .col-table-3 {
+          width: 20%;
+        }
+
+        .col-table-4 {
+          width: 20%;
+        }
+
+        .col-table-5 {
+          width: 12%;
+        }
+
+        .col-table-6 {
+          width: 12%;
+        }
+
+        .col-table-7 {
+          width: 15%;
+        }
+      }
+    }
   }
 }
