--- a/sass/_md.scss
+++ b/sass/_md.scss
@@ -1,25 +1,9 @@
-@media screen and (max-width: 825px) {
-  /**********************/
-  /*  Dashboard Content */
-  /**********************/
-  .dashboard-content {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    height: 100%;
-    overflow-y: auto;
-    background: white;
-  }
-
+@media screen and (max-width: 480px) {
   /**********************/
   /* Booking List style */
   /**********************/
 
   .booking-list-container {
-
-
     .booking-header-container {
       .row_ {
         .col-table-1 {
@@ -27,7 +11,7 @@
         }
 
         .col-table-2 {
-          width: 30%;
+          display: none;
         }
 
         .col-table-3 {
@@ -43,11 +27,11 @@
         }
 
         .col-table-6 {
-          width: 20%;
+          width: 50%;
         }
 
         .col-table-7 {
-          width: 25%;
+          width: 40%;
         }
       }
     }
@@ -59,7 +43,7 @@
         }
 
         .col-table-2 {
-          width: 30%;
+          display: none;
         }
 
         .col-table-3 {
@@ -75,11 +59,11 @@
         }
 
         .col-table-6 {
-          width: 20%;
+          width: 50%;
         }
 
         .col-table-7 {
-          width: 25%;
+          width: 40%;
         }
       }
     }
