--- a/sass/styles.css
+++ b/sass/styles.css
@@ -4,8 +4,10 @@ Table Of Contents:
 - Css Reset
 - Colors
 - General Styles
-- Navigation
-- Back Butto Top
+- Side Navbar
+- Dashboard Content
+- Right Side Navbar
+- Booking List style
 - Media Queries
 ******************************************/
 /*****************************************
@@ -107,6 +109,44 @@ Table Of Contents:
   color: #059dc0;
 }
 
+.btn-o-p {
+  background: #fff;
+  opacity: 0.92;
+  border: 0.1rem solid #059dc0;
+  color: #059dc0;
+  font-size: 0.9em;
+}
+
+.btn-o-p:hover {
+  background: #059dc0;
+  border: 0.1rem solid #059dc0;
+  opacity: 1;
+}
+
+.icon {
+  font-size: 1.5em;
+  color: #c20a28;
+  background: #f9f9f9;
+  padding: 0.5rem;
+  border-radius: 0.4rem;
+}
+
+.icon-income {
+  font-size: 1.5em;
+  color: #32cd32;
+  background: #f9f9f9;
+  padding: 0.5rem;
+  border-radius: 0.4rem;
+}
+
+.icon-users {
+  font-size: 1.5em;
+  color: #059dc0;
+  background: #f9f9f9;
+  padding: 0.5rem;
+  border-radius: 0.4rem;
+}
+
 .divider {
   height: 0.05rem;
   margin: 0rem auto;
@@ -157,7 +197,7 @@ Table Of Contents:
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
   border: none;
-  background-color: #fcfafb;
+  background-color: #fff;
 }
 
 .dropdown-item {
@@ -176,7 +216,7 @@ Table Of Contents:
 }
 
 .dropdown-item:hover {
-  background-color: #fcfafb;
+  color: #059dc0;
 }
 
 .dropdown-divider {
@@ -188,6 +228,134 @@ Table Of Contents:
 }
 
 /* end of dropdown menu */
+.cta {
+  position: relative;
+  margin: auto;
+  padding: 12px 18px;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+  border: none;
+  background: none;
+}
+
+.cta:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  border-radius: 50px;
+  background: #b1dae7;
+  width: 45px;
+  height: 40px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.cta span {
+  position: relative;
+  font-weight: 700;
+  letter-spacing: 0.05em;
+  color: #234567;
+}
+
+.cta svg {
+  position: relative;
+  top: 0;
+  margin-left: 10px;
+  fill: none;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke: #234567;
+  stroke-width: 2;
+  -webkit-transform: translateX(-5px);
+          transform: translateX(-5px);
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.cta:hover:before {
+  width: 100%;
+  background: #b1dae7;
+}
+
+.cta:hover svg {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.cta:active {
+  -webkit-transform: scale(0.95);
+          transform: scale(0.95);
+}
+
+.button {
+  display: inline-block;
+  padding: 12px 24px;
+  border: 1px solid #4f4f4f;
+  border-radius: 4px;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+  position: relative;
+  overflow: hidden;
+  font-size: 19px;
+  color: black;
+  z-index: 1;
+}
+
+.button:before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%) scaleY(1) scaleX(1.25);
+          transform: translateX(-50%) scaleY(1) scaleX(1.25);
+  top: 100%;
+  width: 140%;
+  height: 180%;
+  background-color: rgba(0, 0, 0, 0.05);
+  border-radius: 50%;
+  display: block;
+  -webkit-transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
+}
+
+.button:after {
+  content: "";
+  position: absolute;
+  left: 55%;
+  -webkit-transform: translateX(-50%) scaleY(1) scaleX(1.45);
+          transform: translateX(-50%) scaleY(1) scaleX(1.45);
+  top: 180%;
+  width: 160%;
+  height: 190%;
+  background-color: #39bda7;
+  border-radius: 50%;
+  display: block;
+  -webkit-transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
+}
+
+.button:hover {
+  color: #ffffff;
+  border: 1px solid #39bda7;
+}
+
+.button:hover:before {
+  top: -35%;
+  background-color: #39bda7;
+  -webkit-transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+          transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
+
+.button:hover:after {
+  top: -45%;
+  background-color: #39bda7;
+  -webkit-transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+          transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
+
 /**********************/
 /*     Side Navbar    */
 /**********************/
@@ -296,6 +464,148 @@ Table Of Contents:
   color: #9999;
 }
 
+/**********************/
+/* Booking List style */
+/**********************/
+.booking-form {
+  width: 88%;
+  margin: 0rem auto;
+}
+
+.booking-list-container {
+  width: 88%;
+  margin: 0rem auto;
+  font-size: 0.79em;
+}
+
+.booking-list-container .booking-header-container {
+  margin: 0rem auto 0rem auto;
+  padding: 1.5rem 0rem;
+  background: #fff;
+}
+
+.booking-list-container .booking-header-container .header {
+  color: #9999;
+}
+
+.booking-list-container .booking-header-container .col-table .text-lead {
+  padding-bottom: 1.5rem;
+  font-weight: bold;
+  font-size: 1.3em;
+}
+
+.booking-list-container .booking-header-container .row_ {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.booking-list-container .booking-header-container .row_ .col-table-1 {
+  width: 7%;
+  color: #29c6d5;
+}
+
+.booking-list-container .booking-header-container .row_ .col-table-1 span {
+  margin-left: 0.5rem;
+}
+
+.booking-list-container .booking-header-container .row_ .col-table-2 {
+  width: 20%;
+}
+
+.booking-list-container .booking-header-container .row_ .col-table-3 {
+  width: 20%;
+}
+
+.booking-list-container .booking-header-container .row_ .col-table-4 {
+  width: 20%;
+}
+
+.booking-list-container .booking-header-container .row_ .col-table-5 {
+  width: 12%;
+}
+
+.booking-list-container .booking-header-container .row_ .col-table-6 {
+  width: 12%;
+}
+
+.booking-list-container .booking-header-container .row_ .col-table-7 {
+  width: 12%;
+}
+
+.booking-list-container .header-subtitle-container {
+  margin: 0.1rem auto 0rem auto;
+  padding: 1.4rem 0rem;
+  background: #fff;
+  cursor: pointer;
+}
+
+.booking-list-container .header-subtitle-container:hover {
+  background: #f9f9f9;
+  -webkit-box-shadow: 0 2px 1.5px rgba(0, 0, 0, 0.034);
+          box-shadow: 0 2px 1.5px rgba(0, 0, 0, 0.034);
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.booking-list-container .header-subtitle-container .row_ {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.booking-list-container .header-subtitle-container .row_ .col-table-1 {
+  width: 7%;
+  color: #29c6d5;
+}
+
+.booking-list-container .header-subtitle-container .row_ .col-table-1 span {
+  margin-left: 0.5rem;
+}
+
+.booking-list-container .header-subtitle-container .row_ .col-table-2 {
+  width: 20%;
+}
+
+.booking-list-container .header-subtitle-container .row_ .col-table-3 {
+  width: 20%;
+}
+
+.booking-list-container .header-subtitle-container .row_ .col-table-4 {
+  width: 20%;
+}
+
+.booking-list-container .header-subtitle-container .row_ .col-table-5 {
+  width: 12%;
+}
+
+.booking-list-container .header-subtitle-container .row_ .col-table-6 {
+  width: 12%;
+}
+
+.booking-list-container .header-subtitle-container .row_ .col-table-7 {
+  width: 12%;
+}
+
+.fc {
+  color: #9999;
+}
+
+/**********************/
+/* Mediaqueries */
+/**********************/
 @media screen and (max-width: 1025px) {
   /**********************/
   /*   General Styles   */
@@ -362,6 +672,7 @@ Table Of Contents:
             justify-content: start;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    margin-bottom: 1.5rem;
   }
   .left_hand_side.active ul li {
     margin: 2rem 0;
@@ -402,6 +713,51 @@ Table Of Contents:
   .right_hand_side {
     display: none;
   }
+  /**********************/
+  /* Booking List style */
+  /**********************/
+  .booking-list-container .booking-header-container .row_ .col-table-1 {
+    display: none;
+  }
+  .booking-list-container .booking-header-container .row_ .col-table-2 {
+    width: 20%;
+  }
+  .booking-list-container .booking-header-container .row_ .col-table-3 {
+    width: 20%;
+  }
+  .booking-list-container .booking-header-container .row_ .col-table-4 {
+    width: 20%;
+  }
+  .booking-list-container .booking-header-container .row_ .col-table-5 {
+    width: 12%;
+  }
+  .booking-list-container .booking-header-container .row_ .col-table-6 {
+    width: 12%;
+  }
+  .booking-list-container .booking-header-container .row_ .col-table-7 {
+    width: 15%;
+  }
+  .booking-list-container .header-subtitle-container .row_ .col-table-1 {
+    display: none;
+  }
+  .booking-list-container .header-subtitle-container .row_ .col-table-2 {
+    width: 20%;
+  }
+  .booking-list-container .header-subtitle-container .row_ .col-table-3 {
+    width: 20%;
+  }
+  .booking-list-container .header-subtitle-container .row_ .col-table-4 {
+    width: 20%;
+  }
+  .booking-list-container .header-subtitle-container .row_ .col-table-5 {
+    width: 12%;
+  }
+  .booking-list-container .header-subtitle-container .row_ .col-table-6 {
+    width: 12%;
+  }
+  .booking-list-container .header-subtitle-container .row_ .col-table-7 {
+    width: 15%;
+  }
 }
 
 @media screen and (max-width: 825px) {
@@ -418,6 +774,99 @@ Table Of Contents:
     height: 100%;
     overflow-y: auto;
     background: white;
+  }
+  /**********************/
+  /* Booking List style */
+  /**********************/
+  .booking-list-container .booking-header-container .row_ .col-table-1 {
+    display: none;
+  }
+  .booking-list-container .booking-header-container .row_ .col-table-2 {
+    width: 30%;
+  }
+  .booking-list-container .booking-header-container .row_ .col-table-3 {
+    display: none;
+  }
+  .booking-list-container .booking-header-container .row_ .col-table-4 {
+    display: none;
+  }
+  .booking-list-container .booking-header-container .row_ .col-table-5 {
+    display: none;
+  }
+  .booking-list-container .booking-header-container .row_ .col-table-6 {
+    width: 20%;
+  }
+  .booking-list-container .booking-header-container .row_ .col-table-7 {
+    width: 25%;
+  }
+  .booking-list-container .header-subtitle-container .row_ .col-table-1 {
+    display: none;
+  }
+  .booking-list-container .header-subtitle-container .row_ .col-table-2 {
+    width: 30%;
+  }
+  .booking-list-container .header-subtitle-container .row_ .col-table-3 {
+    display: none;
+  }
+  .booking-list-container .header-subtitle-container .row_ .col-table-4 {
+    display: none;
+  }
+  .booking-list-container .header-subtitle-container .row_ .col-table-5 {
+    display: none;
+  }
+  .booking-list-container .header-subtitle-container .row_ .col-table-6 {
+    width: 20%;
+  }
+  .booking-list-container .header-subtitle-container .row_ .col-table-7 {
+    width: 25%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  /**********************/
+  /* Booking List style */
+  /**********************/
+  .booking-list-container .booking-header-container .row_ .col-table-1 {
+    display: none;
+  }
+  .booking-list-container .booking-header-container .row_ .col-table-2 {
+    display: none;
+  }
+  .booking-list-container .booking-header-container .row_ .col-table-3 {
+    display: none;
+  }
+  .booking-list-container .booking-header-container .row_ .col-table-4 {
+    display: none;
+  }
+  .booking-list-container .booking-header-container .row_ .col-table-5 {
+    display: none;
+  }
+  .booking-list-container .booking-header-container .row_ .col-table-6 {
+    width: 50%;
+  }
+  .booking-list-container .booking-header-container .row_ .col-table-7 {
+    width: 40%;
+  }
+  .booking-list-container .header-subtitle-container .row_ .col-table-1 {
+    display: none;
+  }
+  .booking-list-container .header-subtitle-container .row_ .col-table-2 {
+    display: none;
+  }
+  .booking-list-container .header-subtitle-container .row_ .col-table-3 {
+    display: none;
+  }
+  .booking-list-container .header-subtitle-container .row_ .col-table-4 {
+    display: none;
+  }
+  .booking-list-container .header-subtitle-container .row_ .col-table-5 {
+    display: none;
+  }
+  .booking-list-container .header-subtitle-container .row_ .col-table-6 {
+    width: 50%;
+  }
+  .booking-list-container .header-subtitle-container .row_ .col-table-7 {
+    width: 40%;
   }
 }
 /*# sourceMappingURL=styles.css.map */
