--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -405,6 +405,11 @@ Table Of Contents:
 }
 
 /**********************/
+/*   Content Width    */
+/**********************/
+@import "adapted-table";
+
+/**********************/
 /* Booking List style */
 /**********************/
 @import "bookings-table";
