--- a/sass/_md.scss
+++ b/sass/_md.scss
@@ -68,4 +68,80 @@
       }
     }
   }
+
+  /**********************/
+  /*    Content Width   */
+  /**********************/
+
+  .dashboard-content {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    height: 100%;
+    overflow-y: auto;
+
+    .booking-list-container {
+      .booking-header-container {
+        .row_ {
+          .col-table-1 {
+            display: none;
+          }
+
+          .col-table-2 {
+            display: none;
+          }
+
+          .col-table-3 {
+            display: none;
+          }
+
+          .col-table-4 {
+            display: none;
+          }
+
+          .col-table-5 {
+            width: 50%;
+            display: block;
+          }
+
+          .col-table-6 {
+            width: 50%;
+            display: block;
+          }
+        }
+      }
+
+      .header-subtitle-container {
+        .row_ {
+          .col-table-1 {
+            display: none;
+          }
+
+          .col-table-2 {
+            display: none;
+          }
+
+          .col-table-3 {
+            display: none;
+          }
+
+          .col-table-4 {
+            display: none;
+          }
+
+          .col-table-5 {
+            width: 50%;
+            display: block;
+          }
+
+          .col-table-6 {
+            width: 50%;
+            display: block;
+          }
+        }
+      }
+    }
+  }
 }
