Made content width layout

--- a/sass/_md.scss
+++ b/sass/_md.scss
@@ -73,7 +73,7 @@
   /*    Content Width   */
   /**********************/
 
-  .dashboard-content {
+  .content-width {
     position: fixed;
     top: 50%;
     left: 50%;
