--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -155,7 +155,7 @@ Table Of Contents:
 }
 
 .dropdown-item:hover {
-  // background-color: #fcfafb;
+  background-color: #fcfafb;
   color: $nav-hover;
 }
 
