--- a/sass/_lg.scss
+++ b/sass/_lg.scss
@@ -186,7 +186,7 @@
   /*    Content Width   */
   /**********************/
 
-  .dashboard-content {
+  .content-width  {
     position: fixed;
     top: 50%;
     left: 50%;
