--- a/sass/_sm.scss
+++ b/sass/_sm.scss
@@ -90,7 +90,7 @@
   /*    Content Width   */
   /**********************/
 
-  .dashboard-content {
+  .content-width  {
     position: fixed;
     top: 50%;
     left: 50%;
